<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_layout"
    tools:context=".presentation.user.UserActivity"
    style="@style/layout">

  <include layout="@layout/toolbar"/>

  <androidx.core.widget.NestedScrollView
      style="@style/layout_inner">

    <io.bloco.cardcase.presentation.common.CardInfoView
        android:id="@+id/user_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </androidx.core.widget.NestedScrollView>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/user_edit"
      android:contentDescription="@string/edit"
      android:src="@drawable/ic_edit"
      android:visibility="gone"
      app:backgroundTint="@color/background_card"
      style="@style/fab"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/user_done"
      android:contentDescription="@string/done"
      android:src="@drawable/ic_done"
      android:visibility="gone"
      tools:visibility="visible"
      style="@style/fab"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
