<resources>
  <string name="app_name">Card Case</string>
  <string name="cards_received">Cards received</string>
  <string name="user_card">My card</string>
  <string name="back">Back</string>
  <string name="done">Done</string>
  <string name="avatar">Photo</string>
  <string name="name">Name</string>
  <string name="email">Email</string>
  <string name="phone">Phone number</string>
  <string name="exchange">Exchange</string>
...
