<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_double"
      android:orientation="vertical">

    <FrameLayout
        android:layout_marginBottom="@dimen/card_avatar_margin"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/card_avatar"
        android:layout_height="@dimen/card_avatar">
      <ImageView
          android:id="@+id/card_avatar"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/avatar_placeholder"
          android:contentDescription="@string/avatar"
          android:scaleType="centerInside"/>

      <ImageView
          android:id="@+id/card_avatar_edit_overlay"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="center_horizontal"
          android:contentDescription="@string/avatar_edit"
          android:scaleType="centerInside"
          android:src="@drawable/avatar_edit"
          android:visibility="gone"
          tools:visibility="visible"/>
    </FrameLayout>

    <EditText
        android:id="@+id/card_name"
        style="@style/card_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_name_height"
        android:hint="@string/name"
        android:textSize="@dimen/card_name_text"
        android:nextFocusDown="@+id/card_email"
        tools:ignore="Autofill" />

    <EditText
        android:id="@id/card_email"
        style="@style/card_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_field_height"
        android:layout_marginTop="@dimen/margin_tiny"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/card_phone"
        tools:ignore="Autofill" />

    <EditText
        android:id="@id/card_phone"
        style="@style/card_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_field_height"
        android:layout_marginTop="@dimen/margin_tiny"
        android:hint="@string/phone"
        android:inputType="phone"
        android:nextFocusDown="@+id/card_fields"
        tools:ignore="Autofill" />

    <LinearLayout
        android:id="@id/card_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/card_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:gravity="center_horizontal"
        android:textColor="@color/text_light"
        android:textSize="@dimen/text_small"
        android:visibility="gone"/>

  </LinearLayout>

</androidx.cardview.widget.CardView>