<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <ImageButton
      android:id="@+id/toolbar_icon_start"
      style="@style/toolbar_icon"
      android:layout_gravity="start|center_vertical"
      android:contentDescription="@null"
      android:visibility="gone"
      tools:src="@drawable/ic_user"
      tools:visibility="visible"/>

  <!--suppress AndroidUnknownAttribute -->
  <TextView
      android:id="@+id/toolbar_title"
      fontPath="fonts/Lato-Bold.ttf"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginEnd="@dimen/toolbar_icon"
      android:layout_marginStart="@dimen/toolbar_icon"
      android:gravity="center"
      android:textAllCaps="true"
      android:textColor="@color/text_alt"
      android:textStyle="bold"
      tools:ignore="MissingPrefix"
      tools:text="@string/cards_received"/>

  <ImageButton
      android:id="@+id/toolbar_icon_end"
      style="@style/toolbar_icon"
      android:layout_gravity="end|center_vertical"
      android:contentDescription="@null"
      android:visibility="gone"
      tools:src="@drawable/ic_search"
      tools:visibility="visible"/>

</FrameLayout>